# openschichtplaner5-api

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  RELEASING.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  pytest.ini  test_smoke.py
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  prepare-release.yml  release.yml  update-pins.yml
api/: absence_status.json  dependencies.py  main.py  notifications.json  rate_limit_store.py  schemas.py  types.py
api/data/: skills.json
api/routers/: __init__.py  absences.py  admin.py  auth.py  availability.py  companies.py  conflict_report.py  email.py  employees.py  events.py  ical.py  master_data.py  misc.py  notifications.py  orm_mirror.py  recurring_shifts.py  reports.py  schedule.py  schedule_comments.py
api/uploads/: .gitignore
data/: changelog.json  frontend_errors.json  notification_settings.json  rate_limit_events.jsonl  schedule_comments.json  skills.json  swap_requests.json  wishes.json
docs/: architecture.md
scripts/: migrate_add_company.py
sp5api/: _paths.py  cache.py  demo_users.py  dependencies.py  main.py  rate_limit_store.py  schemas.py  scopes.py  session_store.py  types.py
sp5api/routers/: __init__.py  absences.py  admin.py  auth.py  availability.py  companies.py  conflict_report.py  email.py  employees.py  events.py  export_scheduler.py  ical.py  master_data.py  misc.py  notification_settings.py  notifications.py  orm_mirror.py  overtime.py  qualification_matrix.py  recurring_shifts.py  reports.py  schedule.py  schedule_comments.py  schedule_pdf.py  scheduled_reports.py  webhooks.py  work_time_rules.py
src/openschichtplaner5_api/: __init__.py  __main__.py  advanced_analytics.py  analytics.py  api.py
tests/: conftest.py  test_absence_anonymization.py  test_absence_interval_api.py  test_absence_stats.py  test_absence_status_router.py  test_absences_create.py  test_absences_helpers.py  test_admin_account_protection.py  test_admin_backup_helpers.py  test_admin_compact_pack.py  test_admin_endpoints_coverage.py  test_annual_close_options_api.py  test_api.py  test_api_versioning.py  test_assign_cycle_end.py  test_auth.py  test_auth_2fa_coverage.py  test_auth_change_password.py  test_auth_helpers.py  test_auth_login_parity.py  test_auth_login_security.py  test_auth_reset_password_email.py  test_auto_migrate.py  test_auto_scheduling_improved.py  test_availability.py  test_bulk_group_assign.py  test_business_logic.py  test_cache.py  test_cache_control_prefixes.py  test_cache_sse_integration.py  test_companies_coverage.py  test_company.py  test_company_api.py  test_comprehensive.py  test_conflict_detection.py  test_conflict_report.py  test_conflict_report_internals.py  test_conflicts.py  test_core_only_instance.py  test_coverage_absences_misc.py  (+122 more)
tests/fixtures/: 5ABSEN.DBF  5BOOK-L.DBF  5BOOK.DBF  5BUILD.DBF  5CYASS.DBF  5CYCLE.DBF  5CYENT.DBF  5CYEXC.DBF  5DADEM.DBF  5EMACC.DBF  5EMPL.DBF  5GRACC.DBF  5GRASG.DBF  5GROUP.DBF  5HOBAN.DBF  5HOLID-L.DBF  5HOLID.DBF  5LEAEN.DBF  5LEAVT.DBF  5MASHI.DBF  5NOTE.DBF  5OVER.DBF  5PERIO.DBF  5RESTR.DBF  5SHDEM-L.DBF  5SHDEM.DBF  5SHIFT.DBF  5SPDEM.DBF  5SPSHI.DBF  5USER.DBF  5USETT.DBF  5WOPL.DBF  5XCHAR.DBF
